--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,19 +102,38 @@
             android:contentDescription="@string/empty_box" android:onClick="onClickTRG5"/>
 
 
-    /*OTHER*/
+    /*OTHER ORGANISED FROM TOP TO BOTTOM*/
 
 
     <ImageView
-            android:layout_width="200dp"
-            android:layout_height="60dp" tools:srcCompat="@drawable/check_button" android:id="@+id/check_button"
+            android:layout_width="386dp"
+            android:layout_height="21dp" app:srcCompat="@drawable/status_bar" android:id="@+id/status_bar"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.48"
+            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/status_bar"/>
+    <ImageView
+            android:layout_width="63dp"
+            android:layout_height="57dp" app:srcCompat="@drawable/profile_image" android:id="@+id/imageView6"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.954"
+            app:layout_constraintVertical_bias="0.048" android:contentDescription="@string/profile_image_button"/>
+    <ImageView
+            android:layout_width="47dp"
+            android:layout_height="27dp" app:srcCompat="@drawable/back_arrow" android:id="@+id/imageView5"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.956" app:layout_constraintStart_toStartOf="parent"
-            android:visibility="visible" tools:visibility="visible"
-            android:background="#00000000" app:srcCompat="@drawable/check_button"
-            android:contentDescription="@string/check_button" android:onClick="onClickCheck"
-            app:layout_constraintHorizontal_bias="0.497"/>
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.06"
+            app:layout_constraintVertical_bias="0.068" android:contentDescription="@string/back_arrow_button"
+            android:onClick="onClickBackArrow"/>
+    <ImageView
+            android:layout_width="245dp"
+            android:layout_height="58dp" app:srcCompat="@drawable/hiragana_vowels" android:id="@+id/screen_text"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintVertical_bias="0.147" android:contentDescription="@string/hiragana_vowels"/>
     <ImageView
             android:layout_width="213dp"
             android:layout_height="62dp" tools:srcCompat="@drawable/try_again_button" android:id="@+id/try_again_button"
@@ -125,32 +144,14 @@
             android:background="#00000000" app:srcCompat="@drawable/try_again_button"
             android:contentDescription="@string/try_again_button" android:onClick="onClickTryAgain"/>
     <ImageView
-            android:layout_width="386dp"
-            android:layout_height="21dp" app:srcCompat="@drawable/status_bar" android:id="@+id/status_bar"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.48"
-            app:layout_constraintVertical_bias="0.0"/>
-    <ImageView
-            android:layout_width="245dp"
-            android:layout_height="58dp" app:srcCompat="@drawable/hiragana_vowels" android:id="@+id/screen_text"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.147"/>
-    <ImageView
-            android:layout_width="47dp"
-            android:layout_height="27dp" app:srcCompat="@drawable/back_arrow" android:id="@+id/imageView5"
+            android:layout_width="200dp"
+            android:layout_height="60dp" tools:srcCompat="@drawable/check_button" android:id="@+id/check_button"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.06"
-            app:layout_constraintVertical_bias="0.068" android:contentDescription="@string/back_arrow_button"/>
-    <ImageView
-            android:layout_width="63dp"
-            android:layout_height="57dp" app:srcCompat="@drawable/profile_image" android:id="@+id/imageView6"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.954"
-            app:layout_constraintVertical_bias="0.048" android:contentDescription="@string/profile_image_button"/>
+            app:layout_constraintVertical_bias="0.956" app:layout_constraintStart_toStartOf="parent"
+            android:visibility="visible" tools:visibility="visible"
+            android:background="#00000000" app:srcCompat="@drawable/check_button"
+            android:contentDescription="@string/check_button" android:onClick="onClickCheck"
+            app:layout_constraintHorizontal_bias="0.497"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
