--- a/app/src/main/res/layout/activity_next.xml
+++ b/app/src/main/res/layout/activity_next.xml
@@ -5,104 +5,53 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".NextActivity">
-    <ImageView
-            android:layout_width="140dp"
-            android:layout_height="70dp" app:srcCompat="@drawable/jap_a" android:id="@+id/src1"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.199"
-            app:layout_constraintVertical_bias="0.261" tools:srcCompat="@drawable/jap_a"
-            android:contentDescription="@string/jap_a" android:onClick="onClickSRC1"/>
-    <ImageView
-            android:layout_width="140dp"
-            android:layout_height="70dp" app:srcCompat="@drawable/jap_i" android:id="@+id/src2"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.199"
-            app:layout_constraintVertical_bias="0.381" tools:srcCompat="@drawable/jap_i"
-            android:contentDescription="@string/jap_i" android:onClick="onClickSRC2"/>
-    <ImageView
-            android:layout_width="140dp"
-            android:layout_height="70dp" app:srcCompat="@drawable/jap_u" android:id="@+id/src3"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.199"
-            app:layout_constraintVertical_bias="0.502" tools:srcCompat="@drawable/jap_u"
-            android:contentDescription="@string/jap_u" android:onClick="onClickSRC3"/>
-    <ImageView
-            android:layout_width="140dp"
-            android:layout_height="70dp" app:srcCompat="@drawable/jap_e" android:id="@+id/src4"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.199"
-            app:layout_constraintVertical_bias="0.624" tools:srcCompat="@drawable/jap_e"
-            android:contentDescription="@string/jap_e" android:onClick="onClickSRC4"/>
-    <ImageView
-            android:layout_width="140dp"
-            android:layout_height="70dp" app:srcCompat="@drawable/jap_o" android:id="@+id/src5"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.199"
-            app:layout_constraintVertical_bias="0.745" tools:srcCompat="@drawable/jap_o"
-            android:contentDescription="@string/jap_o" android:onClick="onClickSRC5"/>
-
-    /*TARGETS*/
+        tools:context=".NextActivity" tools:ignore="ExtraText">
 
     <ImageView
-            android:layout_width="140dp"
-            android:layout_height="70dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg1"
+            android:layout_width="386dp"
+            android:layout_height="21dp" app:srcCompat="@drawable/status_bar" android:id="@+id/status_bar"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.261" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.789" android:visibility="visible" tools:visibility="visible"
-            android:background="#00000000" app:srcCompat="@drawable/empty_box"
-            android:contentDescription="@string/empty_box" android:onClick="onClickTRG1"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.48"
+            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/status_bar"/>
     <ImageView
-            android:layout_width="140dp"
-            android:layout_height="70dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg2"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.381" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.789" android:visibility="visible" tools:visibility="visible"
-            android:background="#00000000" app:srcCompat="@drawable/empty_box"
-            android:contentDescription="@string/empty_box" android:onClick="onClickTRG2"/>
+            android:layout_width="63dp"
+            android:layout_height="57dp" app:srcCompat="@drawable/profile_image" android:id="@+id/imageView6"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.954"
+            app:layout_constraintVertical_bias="0.048" android:contentDescription="@string/profile_image_button"/>
     <ImageView
-            android:layout_width="140dp"
-            android:layout_height="70dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg3"
+            android:layout_width="47dp"
+            android:layout_height="27dp" app:srcCompat="@drawable/back_arrow" android:id="@+id/imageView5"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.502" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.789" android:visibility="visible" tools:visibility="visible"
-            android:background="#00000000" app:srcCompat="@drawable/empty_box"
-            android:contentDescription="@string/empty_box" android:onClick="onClickTRG3"/>
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.06"
+            app:layout_constraintVertical_bias="0.068" android:contentDescription="@string/back_arrow_button"
+            android:onClick="onClickBackButton"/>
     <ImageView
-            android:layout_width="140dp"
-            android:layout_height="70dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg4"
+            android:layout_width="192dp"
+            android:layout_height="117dp" app:srcCompat="@drawable/hiragana_vowels_button" android:id="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.624" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.789" android:visibility="visible" tools:visibility="visible"
-            android:background="#00000000" app:srcCompat="@drawable/empty_box"
-            android:contentDescription="@string/empty_box" android:onClick="onClickTRG4"/>
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.054"
+            app:layout_constraintVertical_bias="0.415" android:contentDescription="@string/back_arrow_button"
+            android:onClick="onClickHiraganaButton"/>
     <ImageView
-            android:layout_width="140dp"
-            android:layout_height="70dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg5"
+            android:layout_width="192dp"
+            android:layout_height="117dp" app:srcCompat="@drawable/hiragana_ks_button" android:id="@+id/imageView2"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.745" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.789" android:visibility="visible" tools:visibility="visible"
-            android:background="#00000000" app:srcCompat="@drawable/empty_box"
-            android:contentDescription="@string/empty_box" android:onClick="onClickTRG5"/>
-
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.972"
+            app:layout_constraintVertical_bias="0.415" android:contentDescription="@string/back_arrow_button"
+            android:onClick="onClickBackArrow"/>
     <ImageView
-            android:layout_width="213dp"
-            android:layout_height="82dp" tools:srcCompat="@drawable/check_button" android:id="@+id/check_button"
+            android:layout_width="412dp"
+            android:layout_height="145dp" app:srcCompat="@drawable/hiragana_home" android:id="@+id/screen_text"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.929" app:layout_constraintStart_toStartOf="parent"
-            android:visibility="visible" tools:visibility="visible"
-            android:background="#00000000" app:srcCompat="@drawable/check_button"
-            android:contentDescription="@string/check_button" android:onClick="onClickCheck"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintVertical_bias="0.152" android:contentDescription="@string/hiragana_vowels"
+            app:layout_constraintHorizontal_bias="0.666"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
