--- a/app/src/main/res/layout/activity_hiragana_home.xml
+++ b/app/src/main/res/layout/activity_hiragana_home.xml
@@ -77,7 +77,7 @@
                     android:layout_width="280dp"
                     android:layout_height="80dp" app:srcCompat="@drawable/hiragana_ns_button"
                     android:id="@+id/ns_button"
-            />
+                    android:onClick="onClickNsButton"/>
             <ImageView
                     android:layout_width="280dp"
                     android:layout_height="80dp" app:srcCompat="@drawable/hiragana_hs_button"
